# mico

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt
src/mico/: __init__.py  cli.py
src/mico/adapters/: __init__.py  system.py
src/mico/domain/: __init__.py  entities.py
src/mico/domain/use_cases/: __init__.py  calculate_health.py  filter_processes.py  list_processes.py
tests/: __init__.py  test_adapters.py  test_cli.py  test_domain.py  test_health.py  test_use_cases.py
